--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
+  "homepage": "http://ankiitm2.github.io/CountryDetails",
   "name": "TheWorld",
   "private": true,
   "version": "0.0.1",
   "type": "module",
   "scripts": {
+    "predeploy": "ionic serve",
+    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
@@ -41,6 +44,7 @@
     "cypress": "^13.5.0",
     "eslint": "^8.35.0",
     "eslint-plugin-react": "^7.32.2",
+    "gh-pages": "^6.1.1",
     "jsdom": "^22.1.0",
     "style-loader": "^3.3.3",
     "terser": "^5.4.0",
