--- a/package.json
+++ b/package.json
@@ -5,14 +5,14 @@
   "version": "0.0.1",
   "type": "module",
   "scripts": {
-    "predeploy": "ionic serve",
-    "deploy": "gh-pages -d build",
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test.e2e": "cypress run",
     "test.unit": "vitest",
-    "lint": "eslint"
+    "lint": "eslint",
+    "predeploy": "ionic serve",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@capacitor/app": "5.0.6",
